removed GL do NOT maintain accumulated transactions

--- a/FileIO.ini
+++ b/FileIO.ini
@@ -20,3 +20,5 @@ rem     let Closefilesimple=0 ! Use simple comparison for fnCloseFile
 rem - addded this to see if it helped get rid of some of the F2 clutter that fileio introduces
 let StarsChecked=-1
 
+DateFormatExport$='m/d/cy'  ! Format of Dates when Exporting to CSV
+DateFormatDisplay$='m/d/cy' ! Format of Dates when displaying in Data Crawler
