--- a/Collection-Master Add-On/settings.ini
+++ b/Collection-Master Add-On/settings.ini
@@ -1,3 +1,3 @@
 server=https://ne-test.cdc.nicusa.com/apps-EFILE/services/createFiling?wsdl
-username=testname
-password=testpass
+username=brum01
+password=mcMB83%@4I
