--- a/FileIO.ini
+++ b/FileIO.ini
@@ -1,2 +1,8 @@
-let defaultFileLayoutPath$=env$('QBase')&'\Core\FileIO\Layout\' : let fileLayoutExtension$='.fio' : let StartFileNumber=300 : let templatePath$='S:\Core\FileIO\Layout\Template\' : let starsChecked=-1 : let dateFormatExport$=DateFormatDisplay$='m/d/cy' 
-let promptOnFileCreate=0 ! <for developer>let PromptOnFileCreate=1</for developer>
+let defaultFileLayoutPath$=env$('QBase')&'\Core\FileIO\Layout\'
+let fileLayoutExtension$='.fio'
+let StartFileNumber=300
+let templatePath$='S:\Core\FileIO\Layout\Template\'
+let starsChecked=-1
+let dateFormatExport$=DateFormatDisplay$='m/d/cy' 
+let promptOnFileCreate=0 
+! <for developer>let PromptOnFileCreate=1</for developer>
