--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\windows\system32\SHELL32.dll,38
+IconResource=C:\WINDOWS\System32\SHELL32.dll,127
 [ViewState]
 Mode=
 Vid=
